@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{getFilterValues}
 \alias{getFilterValues}
 \title{Calculates feature filter values.}
@@ -49,6 +49,8 @@ Available \code{method}s are:
     \code{\link[RWeka]{OneR}} assocation rule \cr
   mRMR.classic               \tab R     \tab N     \tab
     MRMR algorithm, see \code{\link[mRMRe]{mRMR.classic}} from \code{mRMRe} package \cr
+  carscore                   \tab R     \tab N     \tab
+    CAR score, see \code{\link[care]{carscore}} from \code{care} package \cr
 }
 }
 \seealso{
